--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,10 @@ background-attachment: fixed;
 
 body {
   width: 100%;
-  height: 50vh;
-  margin: 0;
+  height: 100vh;
+  max-width: 600;
+  min-width: 250;
+  margin: 0 auto;
   color: #ffffff;
   font-family: Tahoma;
   font-size: 16px;
@@ -32,9 +34,9 @@ p {
 }
 
 form {
-  width: 60vw;
-  max-width: 700px;
-  min-width: 400px;
+  width: 90vw;
+  max-width: 600px;
+  min-width: 300px;
   margin: 0 auto;
   background-image: linear-gradient(#000000ff, #00000000);
   font-size: 1.1rem;
