--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,21 @@
 background-image: linear-gradient(#000000ff, #00000000), url(https://static.vecteezy.com/system/resources/previews/026/481/270/large_2x/a-spectacular-gaming-adventure-with-this-stunning-4k-wallpaper-free-photo.jpg);
 background-color: #1199bb;
 background-position: center;
-  
+background-size: cover;
+height: auto;
 background-repeat: no-repeat;
 background-attachment: fixed;
 
 }
 
 body {
+    position: absolute;
+    top: 0.5px;
+    left: 0;
+    right: 0;
+    bottom: 0.5px;
+    overflow-x: hidden; /* or any other value */
+    overflow-y: auto; /* or any other value */
   width: 100%;
   height: 100vh;
   max-width: 600;
