--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,17 @@ background-size: cover;
 height: auto;
 background-repeat: no-repeat;
 background-attachment: fixed;
-
-}
-
-body {
+    position: absolute;
     top: 0.5px;
     left: 0;
     right: 0;
     bottom: 0.5px;
     overflow-x: hidden; /* or any other value */
     overflow-y: auto; /* or any other value */
+
+}
+
+body {
   width: 100%;
   height: 100vh;
   max-width: 600;
