--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 .hero-image {
 background-image: linear-gradient(#000000ff, #00000000), url(https://static.vecteezy.com/system/resources/previews/026/481/270/large_2x/a-spectacular-gaming-adventure-with-this-stunning-4k-wallpaper-free-photo.jpg);
 background-color: #1199bb;
-background-position: center;
-background-size: absolute;
+background-position: absolute;
+background-size: cover;
 height: auto;
 background-repeat: no-repeat;
 background-attachment: fixed;
