--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ background-image: linear-gradient(#000000ff, #00000000), url(https://static.vect
 background-color: #1199bb;
 background-position: absolute;
 background-size: cover;
-
+height: auto;
 background-repeat: no-repeat;
 background-attachment: fixed;
 
