--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ background-attachment: fixed;
     left: 0;
     right: 0;
     bottom: 0.5px;
-    overflow-x: hidden; /* or any other value */
+    overflow-x: visible; /* or any other value */
     overflow-y: auto; /* or any other value */
 
 
